<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/white"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:padding="8dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/img_item_ikon"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginBottom="4dp"
                tools:src="@color/colorAccent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_item_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/nama_aplikasi"
                android:textColor="@android:color/black"
                android:layout_below="@id/img_item_ikon"/>

            <TextView
                android:id="@+id/tv_item_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="25dp"
                tools:text="@string/deskripsi_aplikasi"
                android:layout_below="@id/tv_item_nama"/>

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_deskripsi"
                android:text="@string/judul_detail"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/detail_title">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/judul_versi"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_versi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/versi_aplikasi"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/judul_tipe"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_tipe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/tipe_aplikasi"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/judul_arsitektur"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_arsitektur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/arsitektur_aplikasi"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/judul_rilis"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_rilis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/rilis_aplikasi"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/judul_tanggal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_tanggal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/tanggal_rilis"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/judul_ukuran"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_ukuran"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/ukuran_file"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </TableRow>

            </TableLayout>

        </RelativeLayout>


    </LinearLayout>


</ScrollView>